(feature/header) Fix theme styles and letter spacing in logo

--- a/assets/global/global.scss
+++ b/assets/global/global.scss
@@ -15,8 +15,3 @@ a {
 	font-weight: inherit;
 	text-decoration: none;
 }
-
-.__app {
-	min-width: 100vw;
-	min-height: 100vh;
-}
