--- a/components/atoms/Header/Breadcrumb.scss
+++ b/components/atoms/Header/Breadcrumb.scss
@@ -7,5 +7,5 @@
 	font-size: $header-logo-font-size;
 	line-height: $header-logo-font-size;
 	font-weight: $header-font-weight;
-	letter-spacing: 0.02em;
+	//letter-spacing: 0.02em;
 }
